# speed-dating

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-nclspsrn-speed-dating-introduction.ipynb
